--- a/12-To-Do-List.html
+++ b/12-To-Do-List.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>To-Do-List-p3</title>
-    <link rel="stylesheet" href="Style/11-To-Do-List-p3.css" />
+    <title>!2-To-Do-List</title>
+    <link rel="stylesheet" href="Style/12-To-Do-List.css" />
   </head>
   <body>
-    <p>Todo List Project 3</p>
+    <p>Todo List Project</p>
     <div class="todo-input-grid">
       <input placeholder="Todo name" class="js-name-input css-name-input" />
       <input type="date" class="js-dueDate-input css-dueDate-input" />
-      <button class="add-button" onclick="addTodo();">Add</button>
+      <button class="add-button js-add-button">Add</button>
     </div>
 
     <div class="js-Todo-List todo-grid"></div>
 
-    <script src="Scripts/11-To-Do-List-p3.js"></script>
+    <script src="Scripts/12-To-Do-List.js"></script>
   </body>
 </html>
